# Waves

./: .gitignore  BUG_AUDIT_REPORT.md  BUG_AUDIT_REPORT_2.md  BUG_AUDIT_REPORT_3.md  BUG_AUDIT_REPORT_4.md  BUG_AUDIT_REPORT_5.md  BUG_AUDIT_REPORT_6.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  FEATURE_STATUS.csv  LICENSE  PRIVACY.md  PRODUCT.md  Package.resolved  Package.swift  PrivacyInfo.xcprivacy  README.md  SECURITY.md  audit-report.md  index.html  package.json  polish-bug-audit.md  vite.config.ts
.claude/skills/verify/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Casks/: waves.rb
Sources/Waves/App/: WavesApp.swift  WavesComposition.swift
Sources/Waves/Features/About/: AboutView.swift
Sources/Waves/Services/: AppStoreDependencies.swift  DiagnosticsExportFormatter.swift  SystemSettingsService.swift  UpdaterService.swift
Sources/Waves/Settings/: SettingsView.swift
Sources/Waves/Stores/: AppStore.swift  UserPreferences.swift
Sources/WavesAudioCore/Audio/: AdaptiveMixing.swift  AudioFormatPlan.swift  EqualizerDSP.swift  MeterBallistics.swift  TapDSP.swift
Sources/WavesAudioCore/Backend/: AppDiscoveryPolicy.swift  AudioBackendContracts.swift  AudioControlBackend.swift  AudioSessionSnapshot+Preview.swift  BackendError.swift  PreviewAudioControlBackend.swift
Sources/WavesAudioCore/Models/: AppAudioIntent.swift  AudioApp.swift  AudioDevice.swift  AudioSessionSnapshot.swift  EqualizerSettings.swift  Preset.swift  Profile.swift  SupportMatrix.swift
Tests/WavesTests/: AdaptiveFocusModeTests.swift  AdaptiveMixingTests.swift  AdaptivePolicyEngineTests.swift  AppDiscoveryPolicyTests.swift  AppStoreTransactionTests.swift  AudioHardeningTests.swift  CoalescingPersistenceWriterTests.swift  EqualizerDSPTests.swift  EqualizerSettingsTests.swift  GenerationAwareBackendTests.swift  GlobalEqualizerSettingsTests.swift  ManagedAudioEqualizerBackendTests.swift  ManagedAudioEqualizerDSPTests.swift  MeterBallisticsTests.swift  PersistedSchemaTests.swift  PersistenceStoreTests.swift  PhaseOneContractTests.swift  PrivacyStartupTests.swift  RenderedUISmokeTests.swift  ShutdownTests.swift  SystemSettingsServiceTests.swift  TapDSPTests.swift  UserPreferencesTests.swift  WavesBrandAssetTests.swift  WavesCoreTests.swift  WavesThemeTests.swift
docs/: AUDIT-REPORT.md  RELEASE.md  feature-status.json  release-macos.md
docs/archive/: README.md  designdoc.md
docs/plans/: 2026-03-17-native-backend-parity-design.md  2026-03-17-waves-design.md  2026-03-18-session-discovery-output-design.md  2026-03-19-reactive-native-mixer-design.md  2026-03-20-hybrid-native-overhaul-design.md  2026-03-20-macos-virtual-device-engine-design.md
docs/superpowers/plans/: 2026-07-13-per-app-eq-adaptive-mixing.md  2026-07-20-waves-1.2-adaptive-audio-implementation.md
native/macos/WavesAudioDriver/: CMakeLists.txt  Driver.cpp
script/: build_and_run.sh  feature_tracker.py  make_appcast.sh
scripts/: build-macos-driver.sh  llvm-rc  release-dmg.sh
src/: App.tsx  bun-test.d.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/backend/: fallback.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/backend/macos/: bridge.rs  driver_rpc.rs  virtual_device.rs
src/lib/: apps.test.ts  apps.ts  mixer.ts  shell.ts  shortcuts.test.ts  shortcuts.ts  storage.test.ts  storage.ts
src/types/: waves.ts
(+35 files in other folders)
