[package]
name = "waves"
version = "0.1.0"
description = "Waves desktop mixer"
authors = ["Jonathan Reed"]
edition = "2021"
default-run = "waves"

[lib]
name = "waves_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = ["tray-icon"] }

[target.'cfg(target_os = "macos")'.dependencies]
cpal = "0.17.0"
crossbeam-queue = "0.3.12"
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSWorkspace"] }
objc2-core-audio = { version = "0.3.2", features = ["AudioHardware"] }
objc2-core-audio-types = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-foundation = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_UI_Shell_PropertiesSystem",
] }
